--- a/about.html
+++ b/about.html
@@ -29,6 +29,28 @@
   </nav>
   <h1>About the Team</h1> 
     <h2>About Brad</h2> 
+        <p>
+         Hello! My name is Brad Molina, I'm a junior in highschool, and this is the website for my game. 
+         Some of my favorite things to do are play video games, play soccer, and go to the gym. My favorite 
+         soccer team is FC Barcelona and my favorite video game is FIFA. Some of my favorite subjects in 
+         school are history and science; I like to learn about how the world works and how its changed throughout time.
+        </p>    
+        <h3>Brad's Definition of a Game</h3>
+        <p>
+         A game can be defined as a fun activity that consists of solving puzzles, completing certain objectives, and 
+         beating your oppopnents in order to ahieve a goal. It can be played with friends (co-op) or by yourself (solo).
+        </p>
+        <h3>Brad's Favorite Games</h3> 
+            <ul>
+                <li>Soccer</li>
+                <li>Fortnite</li>
+                <li>FIFA</li>
+                <li>Modern Warfare</li>
+                <li>GTA</li>
+                <li>Uno</li>
+                <li>Hide and Seek</li> 
+                <li>Man Hunt</li> 
+            </ul> 
     <h2>About Anthony</h2> 
     <h2>About Cristian</h2> 
     
