--- a/about.html
+++ b/about.html
@@ -51,6 +51,14 @@
                 <li>Hide and Seek</li> 
                 <li>Man Hunt</li> 
             </ul> 
+        <h3>My Gamer Types</h3> 
+            <ul>
+               <li>60% Achiever</li> 
+               <li>53% Explorer</li> 
+               <li>47% Socialiser</li> 
+               <li>40% Killer</li>
+            </ul> 
+
     <h2>About Anthony</h2> 
     <h2>About Cristian</h2> 
     
