--- a/about.html
+++ b/about.html
@@ -28,6 +28,11 @@
     </ul>
   </nav>
   <h1>About the Team</h1> 
+    <h2>Groups Definition of a Game</h2>
+        <p>
+         A game can be defined as a fun activity that consists of solving puzzles, completing certain objectives, and 
+         beating your oppopnents in order to ahieve a goal. It can be played with friends (co-op) or by yourself (solo).
+        </p>
     <h2>About Brad</h2> 
         <p>
          Hello! My name is Brad Molina, I'm a junior in highschool, and this is the website for my game. 
@@ -35,30 +40,15 @@
          soccer team is FC Barcelona and my favorite video game is FIFA. Some of my favorite subjects in 
          school are history and science; I like to learn about how the world works and how its changed throughout time.
         </p>    
-        <h3>Brad's Definition of a Game</h3>
-        <p>
-         A game can be defined as a fun activity that consists of solving puzzles, completing certain objectives, and 
-         beating your oppopnents in order to ahieve a goal. It can be played with friends (co-op) or by yourself (solo).
-        </p>
-        <h3>Brad's Favorite Games</h3> 
-            <ul>
-                <li>Soccer</li>
-                <li>Fortnite</li>
-                <li>FIFA</li>
-                <li>Modern Warfare</li>
-                <li>GTA</li>
-                <li>Uno</li>
-                <li>Hide and Seek</li> 
-                <li>Man Hunt</li> 
-            </ul> 
-        <h3>My Gamer Types</h3> 
-            <ul>
-               <li>60% Achiever</li> 
-               <li>53% Explorer</li> 
-               <li>47% Socialiser</li> 
-               <li>40% Killer</li>
-            </ul> 
-
-    <h2>About Anthony</h2> 
-    <h2>About Cristian</h2> 
+     <h2>About Anthony</h2>
+        <p> 
+         Hello, my name is Anthony Graham. I'm a senior at ESUMS (Engineering and Science University Magnet School). I'm 17
+         years old and I want to major in electrical engineering and computer science. My hobbies consist of cooking, learning
+         math, and playing games. 
+        <p> 
+     <h2>About Cristian</h2> 
+        <p> 
+         My name is Cristian Lopez and I live in New Haven and attend ESUMS (Engineering and Science University Magnet School). 
+         My hobbies consist of soccer, basketball, and chess (I have a rating of 100). I also have three sisters and I am the oldest child. 
+         
     
