--- a/about.html
+++ b/about.html
@@ -50,5 +50,6 @@
         <p> 
          My name is Cristian Lopez and I live in New Haven and attend ESUMS (Engineering and Science University Magnet School). 
          My hobbies consist of soccer, basketball, and chess (I have a rating of 100). I also have three sisters and I am the oldest child. 
-         
-    
+
+    </body>
+</html>
