--- a/about.html
+++ b/about.html
@@ -60,5 +60,14 @@
                 <li>PUBG</li>
             </ul> 
         </details> 
+        <details>
+            <summary> Gamer Types </summary> 
+            <ul> 
+                <li> 60% Killer </li> 
+                <li> 60% Explorer </li> 
+                <li> 53% Achiever </li> 
+                <li> 27% Socializer </li>
+           </ul>
+        </details> 
     </body>
 </html>
