--- a/about.html
+++ b/about.html
@@ -46,18 +46,20 @@
          years old and I want to major in electrical engineering and computer science. My hobbies consist of cooking, learning
          math, and playing games. 
         </p> 
+        <details> 
+            <summary>
      <h2>About Cristian</h2> 
         <p> 
          My name is Cristian Lopez and I live in New Haven and attend ESUMS (Engineering and Science University Magnet School). 
          My hobbies consist of soccer, basketball, and chess (I have a rating of 100). I also have three sisters and I am the oldest child. 
         </p>
         <details>
-            <summary>Favorite Games</summary> 
+            <summary> Favorite Games </summary> 
             <ul> 
-                <li>Apex Legends</li> 
-                <li>Fifa</li> 
-                <li>Rocket Leauge</li> 
-                <li>PUBG</li>
+                <li> Apex Legends </li> 
+                <li> Fifa </li> 
+                <li> Rocket Leauge </li> 
+                <li> PUBG </li>
             </ul> 
         </details> 
         <details>
