--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Brad Molina">
+        <title>About Me</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
 <nav id="topNav">
   <ul>
     <li> <a href="index.html">Home</a> </li>
@@ -6,3 +16,5 @@
     <li> <a href="glossary.html">Glossary</a> </li>
   </ul>
 </nav>
+  </body>
+      </html>
