--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Brad Molina">
-        <title>About Me</title>
+        <title>Navagation Bar</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
