--- a/about.html
+++ b/about.html
@@ -47,7 +47,15 @@
          math, and playing games. 
         </p> 
         <details> 
-            <summary>
+            <summary> Favorite Games </summary> 
+            <ul> 
+                <li> Monopoly </li> 
+                <li> Pokemon </li> 
+                <li> Yu-Gi Oh!</li> 
+           </ul>
+         </details> 
+        <details> 
+            <summary
      <h2>About Cristian</h2> 
         <p> 
          My name is Cristian Lopez and I live in New Haven and attend ESUMS (Engineering and Science University Magnet School). 
@@ -60,7 +68,7 @@
                 <li> Fifa </li> 
                 <li> Rocket Leauge </li> 
                 <li> PUBG </li>
-            </ul> 
+           </ul> 
         </details> 
         <details>
             <summary> Gamer Types </summary> 
