--- a/about.html
+++ b/about.html
@@ -52,10 +52,17 @@
                 <li> Monopoly </li> 
                 <li> Pokemon </li> 
                 <li> Yu-Gi Oh!</li> 
-           </ul>
+            </ul>
          </details> 
         <details> 
-            <summary
+            <summary> Gamer Types </summary> 
+            <ul> 
+                <li>87% Explorer</li> 
+                <li>49% Killer</li> 
+                <li>40% Socialiser</li> 
+                <li>27% Achiever</li>
+            </ul>
+        </details>
      <h2>About Cristian</h2> 
         <p> 
          My name is Cristian Lopez and I live in New Haven and attend ESUMS (Engineering and Science University Magnet School). 
@@ -68,7 +75,7 @@
                 <li> Fifa </li> 
                 <li> Rocket Leauge </li> 
                 <li> PUBG </li>
-           </ul> 
+            </ul> 
         </details> 
         <details>
             <summary> Gamer Types </summary> 
