--- a/about.html
+++ b/about.html
@@ -39,7 +39,29 @@
          Some of my favorite things to do are play video games, play soccer, and go to the gym. My favorite 
          soccer team is FC Barcelona and my favorite video game is FIFA. Some of my favorite subjects in 
          school are history and science; I like to learn about how the world works and how its changed throughout time.
-        </p>    
+        </p>
+        <details> 
+            <summary> Favorite Games </summary> 
+            <ul> 
+                <li>Soccer</li>
+                <li>Fortnite</li>
+                <li>FIFA</li>
+                <li>Modern Warfare</li>
+                <li>GTA</li>
+                <li>Uno</li>
+                <li>Hide and Seek</li> 
+                <li>Man Hunt</li>
+            </ul> 
+        </details>
+        <details>
+            <summary> Gamer Types </summary> 
+            <ul> 
+                <li>60% Achiever</li> 
+                <li>53% Explorer</li> 
+                <li>47% Socialiser</li> 
+                <li>40% Killer</li>
+            </ul> 
+        </details> 
      <h2>About Anthony</h2>
         <p> 
          Hello, my name is Anthony Graham. I'm a senior at ESUMS (Engineering and Science University Magnet School). I'm 17
