--- a/mission.html
+++ b/mission.html
@@ -24,4 +24,8 @@
        </li> 
     </ul>
   </nav>
-        <h1>Our Mission</h1> 
+        <h1>Our Mission</h1>
+        <p>
+            The internet is one of the biggest creations of humankind. People surf the web everyday to talk to their friends, find information, complete school work and even go to work. It's a very beneficial and useful creation, but it isn't perfect. People aren't perfect. 
+            You'd think that a place where you share personal and private information would be safe. It isn't. Scammers and Hackers contantly find way to try to steal people's information. Data breaches have become the leading cause of identify theft. 
+    
