--- a/mission.html
+++ b/mission.html
@@ -26,6 +26,12 @@
   </nav>
         <h1>Our Mission</h1>
         <p>
-            The internet is one of the biggest creations of humankind. People surf the web everyday to talk to their friends, find information, complete school work and even go to work. It's a very beneficial and useful creation, but it isn't perfect. People aren't perfect. 
-            You'd think that a place where you share personal and private information would be safe. It isn't. Scammers and Hackers contantly find way to try to steal people's information. Data breaches have become the leading cause of identify theft. 
+            The internet is one of the biggest creations of humankind. People surf the web everyday to talk to their friends, 
+            find information, complete school work and even go to work. It's a very beneficial and useful creation, but it 
+            isn't perfect. People aren't perfect. You'd think that a place where you share personal and private information would be 
+            safe. It isn't. Scammers and Hackers contantly find way to try to steal people's information. Data breaches have become 
+            the leading cause of identify theft. A lot of people don't know how to protect themselves from hackers and scammers; that's
+            why we made idenitify theft. A game where you can learn the tactics of hacker/scammer and know how to defend yourself. 
+        </p> 
+        
     
