--- a/index.html
+++ b/index.html
@@ -18,4 +18,35 @@
   </body>
       </html>
 <h1>Our Game</h1>
-    
+   <p>
+       Like Monopoly, our game has one main objective that can be achived in a varitey of ways: make the most money. 
+       You role play as dropouts fomr high schools who for some reason have excellent hacking skills (you don't have
+       to be a highschool dropout, that's just an example). Your goal is to make as much money as you can by stealing 
+       data/information from different locations and from opposing players. You will have basic necessasties other 
+       than quality of your latptop and the amount of money you have. While you play this gave you'll how it feels 
+       to live as a hacker and figure out their tricks to stealing data from people.
+</p> 
+
+<h2>The Rules</h2> 
+<p>
+You use a random color generator to determine your move: 
+    <ul>
+        <li> Red - Move 1 space. </li> 
+        <li> Orange - Move 3 spaces. </li>
+        <li> Yellow - Move 5 spaces. </li>
+        <li> Light Green - Roll one die to determine how much space you move or how much money you gain. </li>
+        <li> Green - Roll two die to determine how much space you move. </li> 
+        <li> Light Blue - Surf the web to gain 100 bytes of data. </li> 
+        <li> Sky Blue - Surf the web again to gain 1000 bytes of *OR* steal 500 bytes of data from a player </li> 
+        <li> Blue - Steal 8 byte of data from a player who is 3 spaces apart from you, otherwise move 4 spaces. </li>
+        <li> Brown - Roll a 12; otherwise, go back ten spaces, pay ten dollars, or give 30 byte of data to the 
+            next player. </li> 
+        <li> Pink - Obtain 8 dollars, but give 3 bytes of data to the player on the left; however, you can obtain
+            2 bytes of data, but give 15 dollars to the player on the right. </li>
+        <li> Return to your house </li>
+</ul>
+</p> 
+      
+
+   
+
