--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ You use a random color generator to determine your move:
             next player. </li> 
         <li> Pink - Obtain 8 dollars, but give 3 bytes of data to the player on the left; however, you can obtain
             2 bytes of data, but give 15 dollars to the player on the right. </li>
-        <li> Return to your house </li>
+        <li> Light Pink - Return to your house </li>
 </ul>
 </p> 
       
