--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <h1>Our Game</h1>
    <p>
        Like Monopoly, our game has one main objective that can be achived in a varitey of ways: make the most money. 
-       You role play as dropouts fomr high schools who for some reason have excellent hacking skills (you don't have
-       to be a highschool dropout, that's just an example). Your goal is to make as much money as you can by stealing 
+       You can role play as high school dropouts who for some reason have excellent hacking skills (you don't have
+       to be a highschool dropout that's just an example). Your goal is to make as much money as you can by stealing 
        data/information from different locations and from opposing players. You will have basic necessasties other 
        than quality of your latptop and the amount of money you have. While you play this gave you'll how it feels 
        to live as a hacker and figure out their tricks to stealing data from people.
