--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ You use a random color generator to determine your move:
        <li> In the shops you can also sell "data" for money </li> 
        <li> There is a city/town players can go into to scout victims to steal from ranging from 
            Banks to Schools. </li>
-       <li> You can send out fake emails and ads to steal IP addresses and files, ultimatley gaining 
+       <li> You can send out fake emails and ads to steal IP addresses and files, ultimately gaining 
            data. These skills can be gained by taking classes which can be bought in the shops. You can
            also upgrade your computer </li> 
        <li> You can visit other players homes when they're not there to steal from them </li> 
