--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ You use a random color generator to determine your move:
            Banks to Schools. </li>
        <li> You can send out fake emails and ads to steal IP addresses and files, ultimately gaining 
            data. These skills can be gained by taking classes which can be bought in the shops. You can
-           also upgrade your computer </li> 
-       <li> You can visit other players homes when they're not there to steal from them </li> 
+           also, upgrade your computer </li> 
+       <li> You can visit other players' homes when they're not there to steal from them </li> 
 </ul> 
 </p> 
       
